# tauri-local-send

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  upload-flow.md
.github/workflows/: release.yml
design-system/localsend-desktop/: MASTER.md
design-system/upload-page/: MASTER.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/network/: ip.rs  mod.rs
src-tauri/src/qrcode/: mod.rs
src-tauri/src/server/: handler.rs  mod.rs
src-tauri/templates/: upload.html
