[package]
name = "tauri-local-send"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_local_send_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

warp = "0.3"
qrcode = "0.12"
dirs = "5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
mime = "0.3"
uuid = { version = "1", features = ["v4"] }
get_if_addrs = "0.5"
image = "0.25"
png = "0.17"
base64 = "0.22"
rand = "0.8"

